Improve Table of Content rendering

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -97,3 +97,17 @@ a.lightbox-image {
 img[height] {
   height: auto;
 }
+
+.toc summary {
+  padding-left: 3px;
+}
+
+.toc li {
+  line-height: 1.2;
+  padding-bottom: 0.4em;
+}
+
+.toc li a {
+  position: relative;
+  top: 1px;
+}
