Fix broken links on GitHub Pages

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{- define "main" }}
 <script>
-  const archive_url = '{{ absURL "/archiv" }}';
+  const archive_url = '{{ absLangURL "archiv" }}';
 
   var url = window.location.href;
   if (url.includes('/categories/') 
