--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -6,13 +6,13 @@
   {{- print " · "}}
 
   <span>
-    <a href="{{ absURL `/impressum` }}">Impressum</a>
+    <a href="{{ absLangURL `impressum` }}">Impressum</a>
   </span>
 
   {{- print " · "}}
 
   <span>
-    <a href="{{ absURL `/datenschutz` }}">Datenschutz</a>
+    <a href="{{ absLangURL `datenschutz` }}">Datenschutz</a>
   </span>
 
   <br>
