Improve "scroll to top" button visibility

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -86,8 +86,12 @@ a.lightbox-image {
   background: var(--entry);
   text-transform: capitalize;
 }
+
 .top-link {
   background: var(--entry);
+  border: 2px solid;
+  bottom: 30px;
+  padding: 10px;
 }
 
 #searchbox input {
